# presenton-groq-backend

./: buildspec.yml  render.yaml
servers/fastapi/: .dockerignore  Dockerfile  pyproject.toml  server.py  start-backend.ps1
servers/fastapi/api/: main.py
servers/fastapi/api/v1/ppt/endpoints/: presentation.py
servers/fastapi/constants/: llm.py
servers/fastapi/services/: database.py  documents_loader.py  icon_finder_service.py  llm_client.py
servers/fastapi/utils/: llm_provider.py  model_availability.py  user_config.py
