[project]
name = "presenton-backend"
version = "0.1.0"
description = "Presenton AI presentation generator - Groq API backend"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "dirtyjson>=1.0.8",
    "fastapi[standard]>=0.116.1",
    "nltk>=3.9.1",
    "openai>=1.98.0",
    "pathvalidate>=3.3.1",
    "python-pptx>=1.0.2",
    "sqlmodel>=0.0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
