[project]
name = "presenton-backend"
version = "0.1.0"
description = "Presenton AI presentation generator - Groq API backend"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "aiosqlite>=0.21.0",
    "anthropic>=0.60.0",
    "chromadb>=0.6.3",
    "dirtyjson>=1.0.8",
    "docling>=2.17.0",
    "fastapi[standard]>=0.116.1",
    "fastmcp>=0.0.8",
    "google-genai>=1.28.0",
    "groq>=0.14.0",
    "httpx>=0.28.1",
    "lxml>=5.3.0",
    "nltk>=3.9.1",
    "openai>=1.98.0",
    "pathvalidate>=3.3.1",
    "pdfplumber>=0.11.4",
    "pillow>=11.0.0",
    "python-pptx>=1.0.2",
    "sqlmodel>=0.0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]
